--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,25 @@ spring:
       enabled: true
       settings:
         web-allow-others: true
-      path: h2-console
+      path: /h2-console
+
+  datasource:
+    url: jdbc:h2:mem:testdb;MODE=MySQL;DB_CLOSE_DELAY=-1
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: create
+    properties:
+      hibernate:
+        format_sql: true
+        show_sql: true
+        dialect: org.hibernate.dialect.MySQL5Dialect
+        jdbc:
+          lob:
+            non_contextual_creation: true
 
 eureka:
   instance:
@@ -21,4 +39,4 @@ eureka:
       defaultZone: http://127.0.0.1:8761/eureka # 유레카 서버 주소 지정
 
 greeting:
-  message: Hello... World !
+  message: Hello... World ! Welcome to the Simple E-commerce.
