--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -4,5 +4,5 @@ spring:
       uri: http://localhost:8888
       name: user-service # config-service 가 참조하고 있는 파일의 이름 (user-service.yml). 기본값은 application.yml.
                          # 잘 모르겠으면 config-service 애플리케이션으로 가서 resources/img.png 를 확인하기 바람.
-  profiles:
-    active: dev # profiles 설정시 ecommerce-dev.yml 을 참조하게 됨
+  #profiles:
+  #  active: dev # profiles 설정시 ecommerce-dev.yml 을 참조하게 됨
