--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -56,5 +56,5 @@ management:
   endpoints:
     web:
       exposure:
-        include: refresh, health, beans
+        include: refresh, health, beans, httptrace, info, metrics, prometheus
 
